--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.0",
     "flag-icons": "^7.1.0",
     "rxjs": "~7.8.0",
+    "safe-pipe": "^3.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
